--- a/sample.env
+++ b/sample.env
@@ -1,11 +1,11 @@
-API_ID = 
-API_HASH = 
-BOT_TOKEN = 
-MONGO_DB_URI = 
-INDEX_ID = 
-UPLOADS_ID = 
-STATUS_ID = 
-SCHEDULE_ID = 
-CHANNEL_TITLE = 
-INDEX_USERNAME = 
-UPLOADS_USERNAME = 
+API_ID = 4886329
+API_HASH = d34698a8fa01cd0dfd5d06473847221b
+BOT_TOKEN = 5320523567:AAHIpNQvQZ_qiaHV8SlDjH0XvSCRYndtJB4
+MONGO_DB_URI = mongodb+srv://ShoyoArcane:ShoyoArcane@cluster0.csikm.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+INDEX_ID = -1001629551874
+UPLOADS_ID = -1001546803380
+STATUS_ID = 5
+SCHEDULE_ID = 6
+CHANNEL_TITLE = Arcane Ongoing 
+INDEX_USERNAME = Ongoing_Anime_Index_sub
+UPLOADS_USERNAME = ArcaneOngoing
