--- a/sample.env
+++ b/sample.env
@@ -2,10 +2,10 @@ API_ID =
 API_HASH = 
 BOT_TOKEN = 
 MONGO_DB_URI = 
-INDEX_ID = 
-UPLOADS_ID = 
-STATUS_ID = 
-SCHEDULE_ID = 
+INDEX_CHANNEL_ID = 
+UPLOADS_CHANNEL_ID = 
+STATUS_MSG_ID = 
+SCHEDULE_MSG_ID = 
 CHANNEL_TITLE = 
-INDEX_USERNAME = 
-UPLOADS_USERNAME = 
+INDEX_CHANNEL_USERNAME = 
+UPLOADS_CHANNEL_USERNAME = 
